--- a/project_detail.html
+++ b/project_detail.html
@@ -6,198 +6,84 @@
 <title>Workspace — Aries Workflow Mapper</title>
 <link rel="stylesheet" href="main.css" />
 <style>
-/* --- BASE STYLES --- */
+/* trimmed/concise styles mostly same as before but ensure canvas fills */
 :root{
   --accent:#0b74ff; --muted:#6b7280; --panel:#ffffffee; --bg:#ffffff;
-  --canvas-bg: #f5f5f5; /* Light gray background for contrast */
-  --grid-color:rgba(15,23,42,0.08); 
+  --canvas-bg: #f5f5f5;
+  --grid-color:rgba(15,23,42,0.08);
   --node-shadow:0 5px 15px rgba(15,23,42,0.1);
-  --link-color:#4b5563; 
+  --link-color:#4b5563;
   --link-selected:#ff7a59;
 }
-html,body{height:100%;margin:0;font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,Arial;background:var(--bg)}
+html,body{height:100%;margin:0;font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,Arial;background:var(--bg);color:#0f172a}
 
-/* --- HEADER FIX: Use Flexbox for robust layout and spacing --- */
-.topbar {
-    display: flex;
-    align-items: center;
-    gap: 15px; /* Spacing between main items (menu, title, actions) */
-    padding: 10px 14px;
-    border-bottom: 1px solid #f1f1f1;
-    background: #fff;
-    position: sticky;
-    top: 0;
-    z-index: 40;
-    min-height: 40px; /* Ensure space for content */
-}
+/* header */
+.topbar { display:flex; align-items:center; gap:15px; padding:10px 14px; border-bottom:1px solid #f1f1f1; background:#fff; position:sticky; top:0; z-index:100; }
+.header-title{ font-weight:700; font-size:0.98rem; white-space:nowrap; overflow:hidden; text-overflow:ellipsis }
+.header-actions{ margin-left:auto; display:flex; gap:10px; align-items:center }
 
-.header-title{
-    font-weight:700;
-    font-size:0.98rem;
-    white-space: nowrap; /* Prevent project name from wrapping */
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-.header-actions{
-    margin-left:auto; 
-    display:flex; 
-    gap:10px; 
-    align-items:center;
-}
+/* canvas */
+.canvas-wrap{ flex-grow:1; height: calc(100vh - 52px); position:relative; display:block; background:var(--canvas-bg); overflow:hidden; }
+#canvas{ width:100%; height:100%; position:relative; touch-action:none; user-select:none; }
+#board{ position:absolute; left:0; top:0; transform-origin:top left; width:2000px; height:1600px; } /* large board */
+#svg{ position:absolute; left:0; top:0; width:100%; height:100%; pointer-events:none; z-index:10 }
 
-.icon-btn{background:transparent;border:0;font-size:18px;cursor:pointer;padding:6px;border-radius:999px}
-.btn{padding:8px 12px;border:0;border-radius:6px;cursor:pointer;font-weight:600}
-.btn.primary{background:var(--accent);color:#fff}
-.btn.ghost{background:transparent;color:var(--muted);border:1px solid #e5e7eb}
-.btn:hover{opacity:0.9}
-
-.tool-btn{display:flex;flex-direction:column;align-items:center;gap:4px;font-size:12px;cursor:pointer;padding:8px 12px;border-radius:8px;border:1px solid transparent;user-select:none;transition:all 0.1s}
-.tool-btn:hover{background:var(--panel)}
-.tool-btn.active{background:var(--panel);border:1px solid #e5e7eb}
-.tool-icon{font-size:20px;line-height:1}
-.tool-btn.disabled{opacity:0.5;pointer-events:none}
-
-/* --- CANVAS & BOARD --- */
-.canvas-wrap{flex-grow:1;overflow:hidden;position:relative; background:var(--canvas-bg);}
-#canvas{width:100%;height:100%;position:absolute;top:0;left:0;cursor:grab; background:var(--canvas-bg);}
-#board{transform-origin:top left;transition:transform 0.15s ease-out; position:relative; width:100%; height:100%;}
-#panLayer{position:absolute;top:0;left:0;width:100%;height:100%;z-index:20;cursor:grab}
-#svg{position:absolute;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:10}
-
-/* --- NODE STYLES (WORKFLOW TYPES) --- */
+/* node */
 .node{
-  position:absolute; /* CRITICAL: Ensures nodes can be moved independently */
-  padding:16px 20px;
-  min-width:180px; 
-  min-height:80px;
-  box-shadow:var(--node-shadow);
-  border-radius:12px;
-  background:var(--panel);
-  cursor:pointer;
-  transition:border-color 0.1s; 
-  border:2px solid transparent;
-  z-index: 15;
-  transform-origin: center center;
+  position:absolute; padding:14px 18px; min-width:160px; min-height:70px;
+  box-shadow:var(--node-shadow); border-radius:12px; background:var(--panel);
+  cursor:grab; transition:box-shadow .08s, border-color .08s; border:2px solid transparent; z-index:15;
 }
-.node.selected{border-color:var(--accent); box-shadow:0 0 0 3px rgba(11, 116, 255, 0.3);}
-.node-title{font-weight:700;font-size:1.1rem;margin-bottom:8px; white-space: normal; word-break: break-word;}
-.node-body{font-size:0.9rem;color:#374151; white-space: normal; word-break: break-word;}
+.node:active{ cursor:grabbing }
+.node.selected{ border-color:var(--accent); box-shadow:0 8px 26px rgba(11,116,255,0.12) }
+.node-title{ font-weight:700; margin-bottom:6px; font-size:1.05rem }
+.node-body{ font-size:0.9rem; color:#374151; white-space:normal; word-break:break-word }
 
-.node-type-page { background-color: #e6f0ff !important; border-color: #0b74ff; } 
-.node-type-action { background-color: #fff8f0 !important; border-color: #ffb84d; } 
-.node-type-decision { 
-  background-color: #f0fff0 !important; 
-  border-color: #00a854; 
-  width: 150px; 
-  height: 150px; 
-  border-radius: 4px;
-  transform: rotate(45deg); 
-  display: flex; 
-  justify-content: center; 
-  align-items: center;
-  padding: 0;
+/* types */
+.node-type-page { background:#e6f0ff; border-color:#0b74ff }
+.node-type-action { background:#fff8f0; border-color:#ffb84d }
+.node-type-decision {
+  background:#f0fff0; border-color:#00a854; width:150px; height:150px; border-radius:6px; transform:rotate(45deg); display:flex; align-items:center; justify-content:center; padding:0;
 }
-.node-type-decision > * {
-  transform: rotate(-45deg); 
-  text-align: center;
-  max-width: 90%;
-}
+.node-type-decision > * { transform:rotate(-45deg); text-align:center; max-width:90% }
 
+/* anchor */
+.anchor{ position:absolute; width:12px; height:12px; border-radius:50%; background:var(--accent); border:2px solid #fff; opacity:0; transition:opacity .12s; pointer-events:auto; z-index:30 }
+.node:hover .anchor{ opacity:1 }
+.output-anchor{ top:50%; right:-6px; transform:translateY(-50%); cursor:crosshair }
 
-/* --- ANCHOR & LINK STYLES --- */
-.anchor {
-  position:absolute;
-  width: 12px;
-  height: 12px;
-  border-radius:50%;
-  background: var(--accent); 
-  border: 2px solid white;
-  opacity:0;
-  transition:opacity 0.1s;
-  pointer-events:auto;
-  z-index:30;
-}
-.node:hover .anchor{opacity:1;}
-.output-anchor {
-    top: 50%;
-    right: -6px; 
-    transform: translateY(-50%);
-    cursor: crosshair;
-}
+/* controls */
+#floatingTools{ position:fixed; bottom:20px; right:20px; display:flex; gap:10px; background:var(--panel); padding:10px; border-radius:12px; box-shadow:0 10px 20px rgba(0,0,0,0.08); z-index:200 }
+.controls-panel{ position:fixed; bottom:20px; left:20px; padding:12px; background:var(--panel); border-radius:8px; box-shadow:0 5px 15px rgba(0,0,0,0.08); z-index:200; display:flex; gap:12px; align-items:center }
 
-.link-label {
-  fill: var(--link-color);
-  font-size: 14px;
-  font-weight: bold;
-  pointer-events: none; 
-  text-shadow: 1px 1px 0 var(--canvas-bg), -1px 1px 0 var(--canvas-bg), 1px -1px 0 var(--canvas-bg), -1px -1px 0 var(--canvas-bg);
-}
+/* context menu + modal */
+#contextMenu{ position:absolute; display:none; z-index:400; background:#fff; border:1px solid #ddd; border-radius:6px; box-shadow:0 8px 20px rgba(0,0,0,0.12) }
+.context-menu-item{ padding:8px 14px; cursor:pointer }
+.context-menu-item:hover{ background:#f7f7f7 }
 
+/* modal backdrop */
+.modal-backdrop{ position:fixed; inset:0; display:none; justify-content:center; align-items:center; background:rgba(0,0,0,0.45); z-index:600 }
+.modal{ background:#fff; padding:18px; border-radius:12px; width:420px; max-width:94% }
 
-/* --- CONTEXT MENU --- */
-#contextMenu {
-    position: absolute;
-    background: #fff;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-    z-index: 100;
-    padding: 5px 0;
-    min-width: 150px;
-    display: none;
-}
-.context-menu-item {
-    padding: 8px 15px;
-    cursor: pointer;
-    font-size: 14px;
-    display: block;
-}
-.context-menu-item:hover {
-    background: #f0f0f0;
-}
-.context-menu-item.danger {
-    color: #e53e3e;
-}
-
-
-/* --- TOOLBAR & CONTROLS --- */
-#floatingTools{
-    position:fixed;
-    bottom:20px;
-    right:20px;
-    display:flex;
-    gap:10px;
-    background:var(--panel);
-    padding:10px;
-    border-radius:12px;
-    box-shadow:0 10px 20px rgba(0,0,0,0.1);
-    z-index:50
-}
-.controls-panel{position:fixed;bottom:20px;left:20px;padding:12px;background:var(--panel);border-radius:8px;box-shadow:0 5px 15px rgba(0,0,0,0.1);z-index:50;display:flex;gap:15px;align-items:center}
-.field label{font-weight:600;display:block;margin-bottom:4px}
-.modal-backdrop{position:fixed;inset:0;background:rgba(0,0,0,0.5);display:none;justify-content:center;align-items:center;z-index:1000}
-.modal-backdrop[aria-hidden="false"]{display:flex}
-.modal{background:#fff;padding:25px;width:400px;max-width:90%;border-radius:12px;box-shadow:0 20px 50px rgba(0,0,0,0.3)}
+/* small responsive */
+@media (max-width:700px){ .controls-panel{ display:none } }
 </style>
 </head>
 <body>
 
-<header class="topbar" style="background:white; color:black; border-bottom:1px solid #f1f1f1;">
-    <button class="hamburger" id="menuIcon" style="color:black;">☰</button>
-    
-    <div class="header-title" id="headerTitle" style="color:black;">Loading Project...</div>
-    
-    <div class="header-actions">
-      <button id="saveBoard" class="btn primary">Save Board</button>
-      <a href="projects.html" id="backToProjects" class="btn ghost">← Projects</a>
-    </div>
+<header class="topbar">
+  <button class="hamburger" id="menuIcon" aria-label="Open menu">☰</button>
+  <div class="header-title" id="headerTitle">Loading project…</div>
+  <div class="header-actions">
+    <button id="saveBoard" class="btn primary">Save Board</button>
+    <a href="projects.html" id="backToProjects" class="btn ghost">← Projects</a>
+  </div>
 </header>
 
-
 <div class="canvas-wrap">
-  <div id="canvas">
-    <div id="board">
-      <svg id="svg">
+  <div id="canvas" tabindex="0" aria-label="Workflow Canvas">
+    <div id="board" role="application" aria-describedby="headerTitle">
+      <svg id="svg" viewBox="0 0 2000 1600" preserveAspectRatio="xMidYMid meet">
         <defs>
           <marker id="arrowhead" viewBox="0 0 10 10" refX="8" refY="5" markerUnits="strokeWidth" markerWidth="6" markerHeight="6" orient="auto">
             <path d="M 0 0 L 10 5 L 0 10 z" fill="var(--link-color)" />
@@ -208,68 +94,51 @@ html,body{height:100%;margin:0;font-family:Inter,system-ui,-apple-system,"Segoe 
         </defs>
       </svg>
     </div>
-    <div id="panLayer"></div>
   </div>
 </div>
-
 
 <div id="floatingTools" role="toolbar" aria-label="Workflow Tools">
-  <button id="toolAddPage" class="tool-btn" data-type="page" aria-label="Add Web Page Node">
-    <span class="tool-icon">📄</span>
-    <span>Page</span>
-  </button>
-  <button id="toolAddAction" class="tool-btn" data-type="action" aria-label="Add User Action Node">
-    <span class="tool-icon">🛠️</span>
-    <span>Action</span>
-  </button>
-  <button id="toolAddDecision" class="tool-btn" data-type="decision" aria-label="Add Decision Node">
-    <span class="tool-icon">❓</span>
-    <span>Decision</span>
-  </button>
-  <div style="width:1px;height:30px;background:#e5e7eb;margin:0 5px;"></div>
-  <button id="toolDeleteNode" class="tool-btn disabled" disabled aria-label="Delete Selected Node">
-    <span class="tool-icon">🗑️</span>
-    <span>Delete Node</span>
-  </button>
-  <button id="toolDeleteLink" class="tool-btn disabled" disabled aria-label="Delete Selected Link">
-    <span class="tool-icon">✂️</span>
-    <span>Delete Link</span>
-  </button>
+  <button id="toolAddPage" class="tool-btn" title="Add Page">📄 Page</button>
+  <button id="toolAddAction" class="tool-btn" title="Add Action">🛠️ Action</button>
+  <button id="toolAddDecision" class="tool-btn" title="Add Decision">❓ Decision</button>
+  <div style="width:1px;height:30px;background:#e5e7eb;margin:inline 6px"></div>
+  <button id="toolDeleteNode" class="tool-btn" disabled>🗑️ Delete Node</button>
+  <button id="toolDeleteLink" class="tool-btn" disabled>✂️ Delete Link</button>
 </div>
-
 
 <div class="controls-panel">
-  <div class="field">
-    <button id="zoomOutCorner" class="icon-btn" aria-label="Zoom Out" style="font-size:24px; color:#333;">-</button>
-    <span id="zoomIndicator" style="font-weight:600; width:50px; text-align:center;">100%</span>
-    <button id="zoomInCorner" class="icon-btn" aria-label="Zoom In" style="font-size:24px; color:#333;">+</button>
+  <div>
+    <button id="zoomOutCorner" class="icon-btn">-</button>
+    <span id="zoomIndicator" style="width:60px; display:inline-block; text-align:center; font-weight:600">100%</span>
+    <button id="zoomInCorner" class="icon-btn">+</button>
   </div>
-  <div class="field">
+  <div>
     <label><input id="showGrid" type="checkbox" checked> Grid</label>
-    <label>Size <input id="gridSize" type="number" value="25" min="5" max="200"></label>
-    <button id="centerBtn" class="tutorial-btn" style="background:#f3f4f6;">Center</button>
+    <label style="margin-left:8px">Size <input id="gridSize" type="number" value="25" min="5" max="200" style="width:70px"></label>
+    <button id="centerBtn" style="margin-left:8px">Center</button>
   </div>
 </div>
 
-<div id="contextMenu" style="display: none;">
-    <div class="context-menu-item" id="contextEdit">Edit Node</div>
-    <div class="context-menu-item danger" id="contextDelete">Delete Node</div>
+<div id="contextMenu">
+  <div class="context-menu-item" id="contextEdit">Edit Node</div>
+  <div class="context-menu-item" id="contextDelete">Delete Node</div>
 </div>
 
-
-<div id="modal" class="modal-backdrop" role="dialog" aria-modal="true" aria-hidden="true">
-  <div class="modal">
+<div id="modal" class="modal-backdrop" aria-hidden="true">
+  <div class="modal" role="dialog" aria-modal="true">
     <h3>Node Settings</h3>
-    <p>ID: <span id="modalProjectId" style="font-weight:bold; font-family: monospace;"></span></p>
-    <div class="field"><label>Title (Appears on Node)</label><input id="modalTitle" type="text"></div>
-    <div class="field"><label>Notes/Details</label><textarea id="modalBody" rows="4"></textarea></div>
-    <div class="modal-actions" style="display:flex;justify-content:space-between;margin-top:20px">
+    <p>ID: <span id="modalProjectId" style="font-family:monospace"></span></p>
+    <div class="field"><label>Title</label><input id="modalTitle" type="text" style="width:100%"></div>
+    <div class="field"><label>Notes</label><textarea id="modalBody" rows="5" style="width:100%"></textarea></div>
+    <div style="display:flex; justify-content:space-between; margin-top:12px">
       <button id="deleteBlock" class="btn ghost">Delete Node</button>
-      <div style="display:flex;gap:8px"><button id="cancelModal" class="btn ghost">Cancel</button><button id="saveModal" class="btn primary">Save Changes</button></div>
+      <div style="display:flex; gap:8px">
+        <button id="cancelModal" class="btn ghost">Cancel</button>
+        <button id="saveModal" class="btn primary">Save</button>
+      </div>
     </div>
   </div>
 </div>
-
 
 <script type="module" src="firebase-config.js"></script>
 <script type="module" src="app.js"></script>
@@ -279,14 +148,12 @@ html,body{height:100%;margin:0;font-family:Inter,system-ui,-apple-system,"Segoe 
       const urlParams = new URLSearchParams(window.location.search);
       return urlParams.get('id');
   }
-
-  window.currentProjectId = getProjectIdFromUrl(); 
-  
+  window.currentProjectId = getProjectIdFromUrl();
   if (!window.currentProjectId) {
-      alert("Error: No Project ID found in URL. Returning to Projects.");
-      window.location.href = "projects.html";
+    alert("No project ID found — returning to projects.");
+    window.location.href = "projects.html";
   } else {
-    document.getElementById('headerTitle').textContent = `Workflow: ${window.currentProjectId.substring(0, 5)}...`;
+    document.getElementById('headerTitle').textContent = `Loading project ${window.currentProjectId.substring(0,5)}…`;
   }
 </script>
 
