--- a/project_detail.html
+++ b/project_detail.html
@@ -14,159 +14,139 @@
   --link-color:#4b5563;
   --link-selected:#ff7a59;
 }
+
+/* Basic reset */
 html,body{height:100%;margin:0;font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,Arial;background:var(--bg);color:#0f172a}
-.topbar { display:flex; align-items:center; gap:12px; padding:10px 14px; border-bottom:1px solid #f1f1f1; background:#fff; position:sticky; top:0; z-index:100; }
-.header-title{ font-weight:700; font-size:0.98rem; white-space:nowrap; overflow:hidden; text-overflow:ellipsis }
-.header-actions{ margin-left:auto; display:flex; gap:10px; align-items:center }
+
+/* Header - black and high-contrast */
+.topbar {
+  display:flex;
+  align-items:center;
+  gap:12px;
+  padding:10px 12px;
+  background:#000;
+  color:#fff;
+  position:sticky;
+  top:0;
+  z-index:1200;
+  box-shadow:0 2px 8px rgba(0,0,0,0.12);
+}
+
+/* Menu icon */
+.hamburger { 
+  background:transparent; border:none; color:#fff; font-size:18px; cursor:pointer; 
+  width:36px; height:36px; display:flex; align-items:center; justify-content:center;
+  flex:0 0 36px;
+}
+
+/* Title - flexible and truncates */
+.header-title {
+  font-weight:700;
+  font-size:1rem;
+  white-space:nowrap;
+  overflow:hidden;
+  text-overflow:ellipsis;
+  color:#fff;
+  margin:0 8px;
+  flex:1 1 320px; /* allow shrinking but keep min width */
+  min-width:140px;
+}
+
+/* header-controls container (right aligned) */
+.header-actions {
+  display:flex;
+  gap:8px;
+  align-items:center;
+  justify-content:flex-end;
+  flex:0 0 auto;
+  min-width:0;
+}
+
+/* individual buttons */
+.topbar .btn, .topbar .tool-btn {
+  -webkit-appearance:none; appearance:none;
+  border-radius:8px;
+  border:1px solid rgba(255,255,255,0.14);
+  background: rgba(255,255,255,0.06);
+  color:#fff;
+  padding:6px 10px;
+  font-weight:600;
+  cursor:pointer;
+}
+
+/* small link styled */
+#backToProjects { color:#c8a2ff; text-decoration:none; background:transparent; border:none; padding:6px 8px; }
+
+/* inspector toggle button */
+#toggleInspector { background:transparent; border:1px solid rgba(255,255,255,0.08); color:#fff; padding:6px 8px; border-radius:6px; }
 
 /* layout: canvas + inspector */
-.app-shell{ display:flex; height: calc(100vh - 52px); }
+.app-shell{ display:flex; height: calc(100vh - 52px); overflow:hidden; }
+
+/* Canvas area */
 .canvas-wrap{ flex:1; position:relative; overflow:hidden; background:var(--canvas-bg); }
 #canvas{ width:100%; height:100%; position:relative; touch-action:none; user-select:none; }
 #board{ position:absolute; left:0; top:0; transform-origin:top left; width:2200px; height:1600px; }
-#svg{ position:absolute; left:0; top:0; width:100%; height:100%; pointer-events:none; z-index:10 }
 
-/* inspector */
-.inspector { width:340px; background:#fff; border-left:1px solid #eee; box-shadow:-6px 0 18px rgba(12,15,20,0.03); padding:12px; display:flex; flex-direction:column; gap:12px; z-index:300; }
+/* Inspector (right panel) - hidden by default via class 'hidden' */
+.inspector {
+  width:340px;
+  background:#fff;
+  border-left:1px solid #eee;
+  box-shadow:-6px 0 18px rgba(12,15,20,0.03);
+  padding:16px;
+  display:flex;
+  flex-direction:column;
+  gap:12px;
+  z-index:300;
+  transition:transform .18s ease, opacity .12s ease;
+}
+.inspector.hidden { transform: translateX(10px); opacity:0; width:0; padding:0 6px; overflow:hidden; }
+
+/* responsive: hide inspector on narrow screens initially */
+@media (max-width:1000px) {
+  .inspector { position:fixed; right:0; top:52px; bottom:0; width:84%; max-width:420px; transform: translateX(100%); opacity:0; }
+  .inspector.visible { transform: translateX(0); opacity:1; }
+}
+
+/* Inspector content */
 .inspector h4{ margin:4px 0 8px 0 }
 .field { display:flex; flex-direction:column; gap:6px; }
 .field input, .field textarea, .field select { padding:8px; border-radius:6px; border:1px solid #e6e6e6; font-size:0.95rem }
 .inspector .meta { font-size:0.85rem; color:var(--muted) }
 
-.node{ position:absolute; padding:14px 18px; min-width:160px; min-height:70px; box-shadow:var(--node-shadow); border-radius:12px; background:var(--panel); cursor:grab; transition:box-shadow .08s, border-color .08s; border:2px solid transparent; z-index:15; }
-.node:active{ cursor:grabbing }
+/* canvas grid + svg overlay */
+#svg{ position:absolute; left:0; top:0; width:100%; height:100%; pointer-events:none; z-index:10 }
+
+/* nodes */
+.node{ position:absolute; padding:14px 18px; min-width:160px; min-height:70px; box-shadow:0 5px 15px rgba(15,23,42,0.08); border-radius:12px; background:var(--panel); cursor:grab; transition:box-shadow .08s, border-color .08s; border:2px solid transparent; z-index:15; }
 .node.selected{ border-color:var(--accent); box-shadow:0 8px 26px rgba(11,116,255,0.12) }
-.node-title{ font-weight:700; margin-bottom:6px; font-size:1.05rem }
-.node-body{ font-size:0.9rem; color:#374151; white-space:normal; word-break:break-word }
+.node-title{ font-weight:700; margin-bottom:6px; font-size:1.05rem; color:#0f172a }
+.node-body{ font-size:0.9rem; color:#374151; word-break:break-word }
 
-/* node types */
-.node-type-page { background:#e6f0ff; border-color:#0b74ff }
-.node-type-action { background:#fff8f0; border-color:#ffb84d }
-.node-type-decision { background:#f0fff0; border-color:#00a854; width:150px; height:150px; border-radius:6px; transform:rotate(45deg); display:flex; align-items:center; justify-content:center; padding:0; }
-.node-type-decision > * { transform:rotate(-45deg); text-align:center; max-width:90% }
-
-/* anchor */
+/* anchors */
 .anchor{ position:absolute; width:12px; height:12px; border-radius:50%; background:var(--accent); border:2px solid #fff; opacity:0; transition:opacity .12s; pointer-events:auto; z-index:30 }
 .node:hover .anchor{ opacity:1 }
 .output-anchor{ top:50%; right:-6px; transform:translateY(-50%); cursor:crosshair }
 
-/* toolbar */
-#floatingTools{ position:fixed; bottom:20px; right:20px; display:flex; gap:8px; background:var(--panel); padding:10px; border-radius:12px; box-shadow:0 10px 20px rgba(0,0,0,0.08); z-index:200 }
-.controls-panel{ position:fixed; bottom:20px; left:20px; padding:12px; background:var(--panel); border-radius:8px; box-shadow:0 5px 15px rgba(0,0,0,0.08); z-index:200; display:flex; gap:12px; align-items:center }
+/* floating tools bottom-left */
+#floatingTools{ position:fixed; bottom:18px; left:18px; display:flex; gap:8px; background:var(--panel); padding:10px; border-radius:12px; box-shadow:0 10px 20px rgba(0,0,0,0.06); z-index:200 }
 
-/* context menu + modal */
+/* controls bottom-right */
+.controls-panel{ position:fixed; bottom:18px; right:18px; padding:10px; background:var(--panel); border-radius:8px; box-shadow:0 5px 15px rgba(0,0,0,0.06); z-index:200; display:flex; gap:10px; align-items:center }
+
+/* context menu */
 #contextMenu{ position:absolute; display:none; z-index:400; background:#fff; border:1px solid #ddd; border-radius:6px; box-shadow:0 8px 20px rgba(0,0,0,0.12) }
 .context-menu-item{ padding:8px 14px; cursor:pointer }
 .context-menu-item:hover{ background:#f7f7f7 }
 
-/* small responsive */
-@media (max-width:1100px){ .inspector{ display:none } }
-  /* ---- Text smoothing & compositing fixes ---- */
-*,
-html, body {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
-}
-
-/* Target header and toolbar text to avoid ghosting */
-.topbar, .topbar * , .header-title, .header-actions, #floatingTools, .controls-panel {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  will-change: transform;
-  transform: translateZ(0);
-}
-
-/* Remove filters / shadows that may cause double-rendering */
-.header-title, .btn, .tool-btn, .icon-btn {
-  text-shadow: none !important;
-  filter: none !important;
-  mix-blend-mode: normal !important;
-}
-
-/* Tame default browser button styles so they look consistent */
-button.btn, .tool-btn, .icon-btn, #saveBoard, #exportBtn {
-  -webkit-appearance: none;
-  appearance: none;
-  border-radius: 6px;
-  border: 1px solid #bdbdbd;
-  background: #fff;
-  padding: 6px 10px;
-  font-weight:600;
-  box-shadow: none;
-}
-
-/* Subtle focus style */
-button:focus { outline: 2px solid rgba(11,116,255,0.12); outline-offset:2px; }
-
-/* If header sits inside a transformed parent, force the header onto its own layer */
-.topbar { transform: translateZ(0); will-change: transform; }
-/* ---- High-contrast black header + visible right-side Project link ---- */
-.topbar {
-  background: #000 !important;           /* black header */
-  color: #fff !important;
-  position: sticky;                      /* keep sticky */
-  top: 0;
-  z-index: 1100;                         /* higher than inspector and board */
-  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-  border-bottom: 0;                      /* remove pale border if present */
-}
-
-/* text/buttons in header */
-.topbar .header-title,
-.topbar .header-actions,
-.topbar .header-actions * {
-  color: #fff !important;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-/* style header buttons in inverted (dark) form */
-.topbar .btn,
-.topbar .tool-btn,
-.topbar .icon-btn {
-  background: rgba(255,255,255,0.06);
-  color: #fff;
-  border: 1px solid rgba(255,255,255,0.14);
-  box-shadow: none;
-  padding: 6px 10px;
-  border-radius: 8px;
-}
-
-/* make Save / Export buttons crisp */
-#saveBoard, #exportBtn {
-  background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02));
-  font-weight: 600;
-}
-
-/* move the back-to-projects link to the extreme right of the header */
-.topbar { position: relative; }
-#backToProjects {
-  position: absolute;
-  right: 12px;
-  top: 10px;            /* tweak if your header height differs */
-  color: #c8a2ff;       /* visible accent color */
-  background: transparent;
-  border: none;
-  text-decoration: none;
-  padding: 6px 10px;
-  border-radius: 6px;
-}
-
-/* ensure header elements remain readable if any transform is active */
-.topbar, .header-title, .header-actions, #backToProjects {
-  transform: translateZ(0);
-  will-change: transform;
-  backface-visibility: hidden;
-}
-
-/* small responsive tweak so the back link doesn't overlap on narrow screens */
+/* small screens */
 @media (max-width:700px) {
-  #backToProjects { position: static; margin-left: 8px; display: inline-block; }
+  .header-title { font-size:0.95rem; }
+  .header-actions { gap:6px; }
+  #floatingTools { left:8px; bottom:90px; }
+  .controls-panel { right:8px; bottom:90px; }
 }
-
 </style>
 </head>
 <body>
@@ -174,11 +154,16 @@ button:focus { outline: 2px solid rgba(11,116,255,0.12); outline-offset:2px; }
 <header class="topbar">
   <button class="hamburger" id="menuIcon" aria-label="Open menu">☰</button>
   <div class="header-title" id="headerTitle">Loading project…</div>
-  <div class="header-actions">
-    <button id="saveBoard" class="btn primary">Save Board</button>
+
+  <div class="header-actions" id="headerActions">
+    <button id="saveBoard" class="btn">Save Board</button>
     <button id="exportBtn" class="btn">Export JSON</button>
-    <label class="btn" style="margin:0"><input id="importFile" type="file" accept="application/json" style="display:none">Import JSON</label>
-    <a href="projects.html" id="backToProjects" class="btn ghost">← Projects</a>
+    <label class="btn" style="display:inline-flex; align-items:center; gap:8px; cursor:pointer;">
+      <input id="importFile" type="file" accept="application/json" style="display:none">
+      Import JSON
+    </label>
+    <button id="toggleInspector" title="Toggle Inspector">Inspector</button>
+    <a id="backToProjects" href="projects.html">← Project</a>
   </div>
 </header>
 
@@ -198,6 +183,16 @@ button:focus { outline: 2px solid rgba(11,116,255,0.12); outline-offset:2px; }
         </svg>
       </div>
     </div>
+
+    <div id="floatingTools" role="toolbar" aria-label="Workflow Tools">
+      <button id="toolAddPage" class="tool-btn" title="Add Page">📄 Page</button>
+      <button id="toolAddAction" class="tool-btn" title="Add Action">🛠️ Action</button>
+      <button id="toolAddDecision" class="tool-btn" title="Add Decision">❓ Decision</button>
+      <div style="width:1px;height:30px;background:#e5e7eb;margin-inline:6px"></div>
+      <button id="toolDeleteNode" class="tool-btn" disabled>🗑️ Delete</button>
+      <button id="toolDeleteLink" class="tool-btn" disabled>✂️ Delete Link</button>
+    </div>
+
     <div class="controls-panel">
       <div>
         <button id="zoomOutCorner" class="icon-btn">-</button>
@@ -211,21 +206,14 @@ button:focus { outline: 2px solid rgba(11,116,255,0.12); outline-offset:2px; }
         <button id="zoomFitBtn" style="margin-left:8px">Zoom to fit</button>
       </div>
     </div>
-    <div id="floatingTools" role="toolbar" aria-label="Workflow Tools">
-      <button id="toolAddPage" class="tool-btn" title="Add Page">📄 Page</button>
-      <button id="toolAddAction" class="tool-btn" title="Add Action">🛠️ Action</button>
-      <button id="toolAddDecision" class="tool-btn" title="Add Decision">❓ Decision</button>
-      <div style="width:1px;height:30px;background:#e5e7eb;margin:inline 6px"></div>
-      <button id="toolDeleteNode" class="tool-btn" disabled>🗑️ Delete Node</button>
-      <button id="toolDeleteLink" class="tool-btn" disabled>✂️ Delete Link</button>
-    </div>
+
     <div id="contextMenu">
       <div class="context-menu-item" id="contextEdit">Edit Node</div>
       <div class="context-menu-item" id="contextDelete">Delete Node</div>
     </div>
   </div>
 
-  <aside class="inspector" id="inspector" aria-label="Node inspector">
+  <aside class="inspector hidden" id="inspector" aria-label="Node inspector">
     <h4>Inspector</h4>
     <div class="meta">Selected: <span id="selectedCount">0</span></div>
 
@@ -247,7 +235,7 @@ button:focus { outline: 2px solid rgba(11,116,255,0.12); outline-offset:2px; }
       <div class="field"><label>Body</label><textarea id="inspectorBody" rows="5"></textarea></div>
       <div class="field" style="display:flex;gap:8px"><div style="flex:1"><label>Width</label><input id="inspectorW" type="number"></div><div style="flex:1"><label>Height</label><input id="inspectorH" type="number"></div></div>
       <div style="display:flex; gap:8px; margin-top:6px">
-        <button id="inspectorSave" class="btn primary">Save</button>
+        <button id="inspectorSave" class="btn">Save</button>
         <button id="inspectorDelete" class="btn">Delete</button>
       </div>
     </div>
@@ -287,6 +275,48 @@ button:focus { outline: 2px solid rgba(11,116,255,0.12); outline-offset:2px; }
   } else {
     document.getElementById('headerTitle').textContent = `Loading project ${window.currentProjectId.substring(0,5)}…`;
   }
+
+  // Inspector toggle behaviour
+  document.addEventListener('DOMContentLoaded', () => {
+    const toggleBtn = document.getElementById('toggleInspector');
+    const inspector = document.getElementById('inspector');
+    const importFile = document.getElementById('importFile');
+
+    // toggle inspector visibility (persist in session)
+    function setInspectorVisible(v) {
+      if (window.matchMedia && window.matchMedia('(max-width:1000px)').matches) {
+        // on small screens use visible class overlay
+        inspector.classList.toggle('visible', v);
+        inspector.classList.toggle('hidden', !v);
+      } else {
+        inspector.classList.toggle('hidden', !v);
+        inspector.classList.remove('visible');
+      }
+    }
+    // default hidden; allow user to toggle
+    setInspectorVisible(false);
+
+    toggleBtn.addEventListener('click', () => {
+      const isHidden = inspector.classList.contains('hidden') && !inspector.classList.contains('visible');
+      setInspectorVisible(isHidden);
+    });
+
+    // wire import input to other logic in workspace.js by dispatching a custom event
+    importFile.addEventListener('change', (ev) => {
+      const file = ev.target.files[0];
+      if (!file) return;
+      const reader = new FileReader();
+      reader.onload = (e) => {
+        let payload = null;
+        try { payload = JSON.parse(e.target.result); } catch(err) { alert('Invalid JSON file'); return; }
+        // dispatch custom event with parsed JSON
+        document.dispatchEvent(new CustomEvent('workspace:importJson', { detail: payload }));
+      };
+      reader.readAsText(file);
+      // reset input
+      ev.target.value = '';
+    });
+  });
 </script>
 
 <script src="workspace.js" defer></script>
